ingressexample.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules: 
    - host: example.com.tr
      http:
        paths:
          - backend:
              serviceName: nginx
              servicePort: 80
